--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.application.name=demo
 
 spring.thymeleaf.cache=false
+
+# Localization / Traduction
+spring.messages.basename=messages
+spring.messages.encoding=UTF-8
