Etablisement de la connexion à la base

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,13 @@ spring.application.name=demo
 
 spring.thymeleaf.cache=false
 
+# Spring DATA
+spring.datasource.url=jdbc:sqlserver://127.0.0.1;databasename=encheres;integratedSecurity=false;encrypt=false;trustServerCertificate=false
+spring.datasource.username=sa
+spring.datasource.password=Pa$$w0rd
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.hikari.maximum-pool-size=10
+
 # Localization / Traduction
 spring.messages.basename=messages
 spring.messages.encoding=UTF-8
