--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.application.name=demo
 
 spring.thymeleaf.cache=false
 
+# Profile (pour switch d'impl dao par exemple)
+spring.profiles.active=jpa
+
 # Spring DATA
 spring.datasource.url=jdbc:sqlserver://127.0.0.1;databasename=encheres;integratedSecurity=false;encrypt=false;trustServerCertificate=false
 spring.datasource.username=sa
